--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,116 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+	margin: 0;
+	padding: 0;
+	font-family: Roboto Mono, sans-serif;
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+	border: 0;
+	background-color: transparent;
+	cursor: pointer;
+}
+
+textarea{
+	border: 0;
+}
+
+textarea:focus{
+	outline: 0;
+}
+
+.app{
+	display: flex;
+	flex-direction: column;
+}
+
+.header{
+	padding: 0.35em;
+	font-family: Lobster, sans-serif;
+	font-size: 2em;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 3px;
+	text-align: center;
+}
+
+.main{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.search-form{
+	padding: 2em;
+	display: flex;
+	justify-content: center;
+}
+
+.searchbar{
+	border-radius: 2rem;
+	border: 0;
+	background-color: #EEE;
+	height: 2rem;
+	padding: 0.25rem;
+	width: 200%;
+	font-size: 1rem;
+	text-indent: 0.5em;
+	font-family: Roboto Mono, sans-serif;
+}
+
+.searchbar:focus{
+	outline: 1px solid #191919;
+}
+
+.notes{
+	display: grid;
+	grid-template-columns: auto;
+}
+
+.note{
+	width: 80vw;
+	margin: 1em;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 6px;
+}
+
+.note-header{
+	background-color: #191919;
+	display: flex;
+	align-items: center;
+	padding: 0.5em;
+}
+
+.note-title{
+	margin-right: auto;
+	color: white;
+}
+
+.addNote{
+	background-color: #191919;
+	color: white;
+	position: absolute;
+	right: 1em;
+	bottom: 1em;
+	position: fixed;
+	z-index: 2;
+	padding: 1.25em;
+	display: flex;
+	align-items: center;
+	border-radius: 10px;
+}
+
+.note-header button{
+	color: white;
+	margin: 0 0 0 0.5em;
+	font-size: 1em;
+}
+
+.note-header button:first-child{
+	margin: 0 0.25em 0 0;
+}
+
+.note-text{
+	padding: 0.5em;
+	white-space: pre-line;
+	height: 10em;
+	font-size: 1em;
+	width: 100%;
 }
