Added search notes feature
- Added search feature
- Added Not Found label

--- a/src/index.css
+++ b/src/index.css
@@ -124,3 +124,10 @@ textarea:focus{
 .note-header-color{
 	width: 2em;
 }
+
+.notFound{
+	padding: 1em 7em;
+	margin-top: 3em;
+	border-radius: 2em;
+	background-color: #CCC;
+}
